Archive2/9c/42b6c38cacac8c/output
main.cpp: In function 'int main()':
main.cpp:5:11: error: invalid conversion from 'volatile int*' to 'int*' [-fpermissive]
     foo(&a);
           ^
