Archive2/9c/42b6c38cacac8c/main.cpp
void foo(int* p) {}
 
int main() {
    volatile int a;
    foo(&a);
    return 0;
}